{
  "version": 4,
  "terraform_version": "1.8.5",
  "serial": 55,
  "lineage": "20c38335-8e40-2c6f-e9a3-ea72ec404659",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c257ab7cc842c416",
            "arn": "arn:aws:ec2:ap-south-1:654654184378:elastic-ip/eipalloc-0c257ab7cc842c416",
            "association_id": "eipassoc-09c655dd90d987bf9",
            "domain": "vpc",
            "id": "eipalloc-0c257ab7cc842c416",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-05c956e77d73adac0",
            "private_dns": "ip-10-0-0-103.ap-south-1.compute.internal",
            "private_ip": "10.0.0.103",
            "public_dns": "ec2-65-0-158-88.ap-south-1.compute.amazonaws.com",
            "public_ip": "65.0.158.88",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01376101673c89611",
            "arn": "arn:aws:ec2:ap-south-1:654654184378:instance/i-0bbf277611c0d3485",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0bbf277611c0d3485",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "pradeep",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-043fa7abd2a9c0403",
            "private_dns": "ip-10-0-1-78.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.78",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0d6a0d3ce003d316b",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fc560d152458e09e",
            "tags": {
              "Name": "private-user"
            },
            "tags_all": {
              "Name": "private-user"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08f77d7b0a3205f82"
            ]
          },
          "dependencies": [
            "aws_security_group.user",
            "aws_subnet.dev",
            "aws_vpc.user"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "user",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01376101673c89611",
            "arn": "arn:aws:ec2:ap-south-1:654654184378:instance/i-0a8d3faadd2a55f23",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a8d3faadd2a55f23",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "pradeep",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0f80670678358ca57",
            "private_dns": "ip-10-0-0-101.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.101",
            "public_ip": "13.232.183.44",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0fe8c0b465b46a2e6",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0dcc347e1d881a704",
            "tags": {
              "Name": "user"
            },
            "tags_all": {
              "Name": "user"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08f77d7b0a3205f82"
            ]
          },
          "dependencies": [
            "aws_security_group.user",
            "aws_subnet.user",
            "aws_vpc.user"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "user",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:654654184378:internet-gateway/igw-08d39ca386ff0a37a",
            "id": "igw-08d39ca386ff0a37a",
            "owner_id": "654654184378",
            "tags": {
              "Name": "cust-ig"
            },
            "tags_all": {
              "Name": "cust-ig"
            },
            "vpc_id": "vpc-0e1b1b4b810e7504f"
          },
          "dependencies": [
            "aws_vpc.user"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c257ab7cc842c416",
            "association_id": "eipassoc-09c655dd90d987bf9",
            "connectivity_type": "public",
            "id": "nat-02dfafa17eb84e6dd",
            "network_interface_id": "eni-05c956e77d73adac0",
            "private_ip": "10.0.0.103",
            "public_ip": "65.0.158.88",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0dcc347e1d881a704",
            "tags": {
              "Name": "NAT"
            },
            "tags_all": {
              "Name": "NAT"
            }
          },
          "dependencies": [
            "aws_eip.dev",
            "aws_subnet.user",
            "aws_vpc.user"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:654654184378:route-table/rtb-073dc61b642537afd",
            "id": "rtb-073dc61b642537afd",
            "owner_id": "654654184378",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-02dfafa17eb84e6dd",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "cust-NAT-rt"
            },
            "tags_all": {
              "Name": "cust-NAT-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e1b1b4b810e7504f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.dev",
            "aws_nat_gateway.dev",
            "aws_subnet.user",
            "aws_vpc.user"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "user",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:654654184378:route-table/rtb-078db843111ca4fb7",
            "id": "rtb-078db843111ca4fb7",
            "owner_id": "654654184378",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08d39ca386ff0a37a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "cust-rt"
            },
            "tags_all": {
              "Name": "cust-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e1b1b4b810e7504f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.user",
            "aws_vpc.user"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c7b75ddb9033b4fe",
            "route_table_id": "rtb-073dc61b642537afd",
            "subnet_id": "subnet-0fc560d152458e09e"
          },
          "dependencies": [
            "aws_eip.dev",
            "aws_nat_gateway.dev",
            "aws_route_table.dev",
            "aws_subnet.dev",
            "aws_subnet.user",
            "aws_vpc.user"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "user",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03d19c6556f67e2b2",
            "route_table_id": "rtb-078db843111ca4fb7",
            "subnet_id": "subnet-0dcc347e1d881a704"
          },
          "dependencies": [
            "aws_internet_gateway.user",
            "aws_route_table.user",
            "aws_subnet.user",
            "aws_vpc.user"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "user",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:654654184378:security-group/sg-08f77d7b0a3205f82",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08f77d7b0a3205f82",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20240708073326132000000001",
            "name_prefix": "terraform-",
            "owner_id": "654654184378",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "cust-sg"
            },
            "tags_all": {
              "Name": "cust-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e1b1b4b810e7504f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.user"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:654654184378:subnet/subnet-0fc560d152458e09e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fc560d152458e09e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "654654184378",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private-subnet"
            },
            "tags_all": {
              "Name": "Private-subnet"
            },
            "vpc_id": "vpc-0e1b1b4b810e7504f"
          },
          "dependencies": [
            "aws_vpc.user"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "user",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:654654184378:subnet/subnet-0dcc347e1d881a704",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dcc347e1d881a704",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "654654184378",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pub-subnet"
            },
            "tags_all": {
              "Name": "pub-subnet"
            },
            "vpc_id": "vpc-0e1b1b4b810e7504f"
          },
          "dependencies": [
            "aws_vpc.user"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "user",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:654654184378:vpc/vpc-0e1b1b4b810e7504f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0149fa95e47dec24b",
            "default_route_table_id": "rtb-031aec3a25d6e469a",
            "default_security_group_id": "sg-07031e5dda0ca571c",
            "dhcp_options_id": "dopt-0896e474538331aee",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e1b1b4b810e7504f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-031aec3a25d6e469a",
            "owner_id": "654654184378",
            "tags": {
              "Name": "cust-vpc"
            },
            "tags_all": {
              "Name": "cust-vpc"
            }
          }
        }
      ]
    }
  ]
}